fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,8 @@ body{
 }
 .top{
     display: flex;
+    top:-150px;
+    position: relative;
 }
 
 .section{
